Change Readme and data

--- a/notebook/01_check_raw_data.ipynb
+++ b/notebook/01_check_raw_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "15e53d88",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train.en: 133317 lines\n",
-      "train.vi: 133317 lines\n",
+      "train.en: 794523 lines\n",
+      "train.vi: 794523 lines\n",
       "valid.en: 1553 lines\n",
       "valid.vi: 1553 lines\n",
       "test.en: 1268 lines\n",
@@ -33,6 +33,221 @@
     "    with open(path, encoding=\"utf-8\") as f:\n",
     "        n_lines = sum(1 for _ in f)\n",
     "    print(f\"{fn}: {n_lines} lines\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ceda56a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROOT   : C:\\Users\\ADMIN\\Desktop\\nmt-transformer\n",
+      "RAW    : C:\\Users\\ADMIN\\Desktop\\nmt-transformer\\data\\raw\n",
+      "OPUS   : C:\\Users\\ADMIN\\Desktop\\nmt-transformer\\data\\opus\n",
+      "PROC   : C:\\Users\\ADMIN\\Desktop\\nmt-transformer\\data\\processed\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ============================================================\n",
+    "# CELL 0: Imports & paths (chạy đầu tiên)\n",
+    "# ============================================================\n",
+    "from pathlib import Path\n",
+    "import re\n",
+    "import html\n",
+    "import unicodedata\n",
+    "\n",
+    "# nếu notebook nằm trong thư mục /notebook thì dùng \"..\"\n",
+    "ROOT = Path(\"..\").resolve()\n",
+    "\n",
+    "DATA_DIR = ROOT / \"data\"\n",
+    "RAW_DIR = DATA_DIR / \"raw\"\n",
+    "OPUS_DIR = DATA_DIR / \"opus\"\n",
+    "PROC_DIR = DATA_DIR / \"processed\"\n",
+    "\n",
+    "for p in [RAW_DIR, OPUS_DIR, PROC_DIR]:\n",
+    "    p.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "print(\"ROOT   :\", ROOT)\n",
+    "print(\"RAW    :\", RAW_DIR)\n",
+    "print(\"OPUS   :\", OPUS_DIR)\n",
+    "print(\"PROC   :\", PROC_DIR)\n",
+    "\n",
+    "def count_lines(path: Path) -> int:\n",
+    "    with path.open(encoding=\"utf-8\") as f:\n",
+    "        return sum(1 for _ in f)\n",
+    "\n",
+    "def stats(prefix: str, en_path: Path, vi_path: Path):\n",
+    "    print(\n",
+    "        f\"[{prefix}] EN={count_lines(en_path):,}  |  VI={count_lines(vi_path):,}\"\n",
+    "    )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7b7aaba4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OK: C:\\Users\\ADMIN\\Desktop\\nmt-transformer\\data\\raw\\train.en\n",
+      "OK: C:\\Users\\ADMIN\\Desktop\\nmt-transformer\\data\\raw\\train.vi\n",
+      "OK: C:\\Users\\ADMIN\\Desktop\\nmt-transformer\\data\\raw\\valid.en\n",
+      "OK: C:\\Users\\ADMIN\\Desktop\\nmt-transformer\\data\\raw\\valid.vi\n",
+      "OK: C:\\Users\\ADMIN\\Desktop\\nmt-transformer\\data\\raw\\test.en\n",
+      "OK: C:\\Users\\ADMIN\\Desktop\\nmt-transformer\\data\\raw\\test.vi\n",
+      "OK: C:\\Users\\ADMIN\\Desktop\\nmt-transformer\\data\\opus\\TED2020.en-vi.en\n",
+      "OK: C:\\Users\\ADMIN\\Desktop\\nmt-transformer\\data\\opus\\TED2020.en-vi.vi\n",
+      "OK: C:\\Users\\ADMIN\\Desktop\\nmt-transformer\\data\\opus\\QED.en-vi.en\n",
+      "OK: C:\\Users\\ADMIN\\Desktop\\nmt-transformer\\data\\opus\\QED.en-vi.vi\n",
+      "[IWSLT train (current RAW)] EN=133,317  |  VI=133,317\n",
+      "[IWSLT valid] EN=1,553  |  VI=1,553\n",
+      "[IWSLT test] EN=1,268  |  VI=1,268\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ============================================================\n",
+    "# CELL 1: Kiểm tra file IWSLT + OPUS đang có\n",
+    "# ============================================================\n",
+    "# 6 file IWSLT hiện có trong raw/\n",
+    "required_raw = [\n",
+    "    \"train.en\", \"train.vi\",\n",
+    "    \"valid.en\", \"valid.vi\",\n",
+    "    \"test.en\",  \"test.vi\",\n",
+    "]\n",
+    "for name in required_raw:\n",
+    "    p = RAW_DIR / name\n",
+    "    if not p.exists():\n",
+    "        raise FileNotFoundError(f\"Missing RAW file: {p}\")\n",
+    "    else:\n",
+    "        print(\"OK:\", p)\n",
+    "\n",
+    "# 4 file OPUS (TED + QED) trong opus/\n",
+    "required_opus = [\n",
+    "    \"TED2020.en-vi.en\",\n",
+    "    \"TED2020.en-vi.vi\",\n",
+    "    \"QED.en-vi.en\",\n",
+    "    \"QED.en-vi.vi\",\n",
+    "]\n",
+    "for name in required_opus:\n",
+    "    p = OPUS_DIR / name\n",
+    "    if not p.exists():\n",
+    "        raise FileNotFoundError(f\"Missing OPUS file: {p}\")\n",
+    "    else:\n",
+    "        print(\"OK:\", p)\n",
+    "\n",
+    "stats(\"IWSLT train (current RAW)\", RAW_DIR/\"train.en\", RAW_DIR/\"train.vi\")\n",
+    "stats(\"IWSLT valid\", RAW_DIR/\"valid.en\", RAW_DIR/\"valid.vi\")\n",
+    "stats(\"IWSLT test\",  RAW_DIR/\"test.en\",  RAW_DIR/\"test.vi\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "4271c71c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Backup train.en  -> train_iwslt.en\n",
+      "Backup train.vi  -> train_iwslt.vi\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ============================================================\n",
+    "# CELL 2: Backup train IWSLT & định nghĩa hàm ghép song ngữ\n",
+    "# ============================================================\n",
+    "# Nếu đã có backup thì giữ nguyên, nếu chưa thì tạo\n",
+    "iwslt_en_bak = RAW_DIR / \"train_iwslt.en\"\n",
+    "iwslt_vi_bak = RAW_DIR / \"train_iwslt.vi\"\n",
+    "\n",
+    "if not iwslt_en_bak.exists():\n",
+    "    (RAW_DIR / \"train.en\").rename(iwslt_en_bak)\n",
+    "    print(\"Backup train.en  -> train_iwslt.en\")\n",
+    "else:\n",
+    "    print(\"Backup EN đã tồn tại:\", iwslt_en_bak)\n",
+    "\n",
+    "if not iwslt_vi_bak.exists():\n",
+    "    (RAW_DIR / \"train.vi\").rename(iwslt_vi_bak)\n",
+    "    print(\"Backup train.vi  -> train_iwslt.vi\")\n",
+    "else:\n",
+    "    print(\"Backup VI đã tồn tại:\", iwslt_vi_bak)\n",
+    "\n",
+    "def concat_parallel(en_paths, vi_paths, out_en: Path, out_vi: Path):\n",
+    "    \"\"\"Ghép nhiều corpus song ngữ lại, giữ alignment từng dòng.\"\"\"\n",
+    "    assert len(en_paths) == len(vi_paths)\n",
+    "    out_en.parent.mkdir(parents=True, exist_ok=True)\n",
+    "    out_vi.parent.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "    total_pairs = 0\n",
+    "    with out_en.open(\"w\", encoding=\"utf-8\") as g_en, \\\n",
+    "         out_vi.open(\"w\", encoding=\"utf-8\") as g_vi:\n",
+    "        for en_p, vi_p in zip(en_paths, vi_paths):\n",
+    "            print(f\">> Adding {en_p.name} + {vi_p.name}\")\n",
+    "            with en_p.open(encoding=\"utf-8\") as f_en, \\\n",
+    "                 vi_p.open(encoding=\"utf-8\") as f_vi:\n",
+    "                for en_line, vi_line in zip(f_en, f_vi):\n",
+    "                    en_line = en_line.rstrip(\"\\n\")\n",
+    "                    vi_line = vi_line.rstrip(\"\\n\")\n",
+    "\n",
+    "                    # Nếu cả hai đều rỗng thì bỏ\n",
+    "                    if not en_line.strip() and not vi_line.strip():\n",
+    "                        continue\n",
+    "\n",
+    "                    g_en.write(en_line + \"\\n\")\n",
+    "                    g_vi.write(vi_line + \"\\n\")\n",
+    "                    total_pairs += 1\n",
+    "\n",
+    "    print(f\"=> Written {total_pairs:,} parallel pairs\")\n",
+    "    print(\"   EN:\", out_en)\n",
+    "    print(\"   VI:\", out_vi)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "7b4feec8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ">> Adding train_iwslt.en + train_iwslt.vi\n",
+      ">> Adding TED2020.en-vi.en + TED2020.en-vi.vi\n",
+      ">> Adding QED.en-vi.en + QED.en-vi.vi\n",
+      "=> Written 794,523 parallel pairs\n",
+      "   EN: C:\\Users\\ADMIN\\Desktop\\nmt-transformer\\data\\raw\\train.en\n",
+      "   VI: C:\\Users\\ADMIN\\Desktop\\nmt-transformer\\data\\raw\\train.vi\n",
+      "[train (merged raw)] EN=794,523  |  VI=794,523\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ============================================================\n",
+    "# CELL 3: GHÉP IWSLT + TED2020 + QED -> data/raw/train.en/vi\n",
+    "# ============================================================\n",
+    "ted_en = OPUS_DIR / \"TED2020.en-vi.en\"\n",
+    "ted_vi = OPUS_DIR / \"TED2020.en-vi.vi\"\n",
+    "qed_en = OPUS_DIR / \"QED.en-vi.en\"\n",
+    "qed_vi = OPUS_DIR / \"QED.en-vi.vi\"\n",
+    "\n",
+    "en_files = [iwslt_en_bak, ted_en, qed_en]\n",
+    "vi_files = [iwslt_vi_bak, ted_vi, qed_vi]\n",
+    "\n",
+    "concat_parallel(en_files, vi_files, RAW_DIR / \"train.en\", RAW_DIR / \"train.vi\")\n",
+    "stats(\"train (merged raw)\", RAW_DIR/\"train.en\", RAW_DIR/\"train.vi\")\n"
    ]
   }
  ],
