--- a/notebook/03_train_tokenizer.ipynb
+++ b/notebook/03_train_tokenizer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "163b4469",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "9576eee9",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "31f05a32",
    "metadata": {},
    "outputs": [
@@ -69,9 +69,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "EN ids: [18, 1, 143, 343, 11, 1054, 13, 1039, 18, 1, 2057, 6, 4300, 204, 136, 4455, 199]\n",
-      "VI dec_in: [2, 18, 1, 266, 2510, 65, 37, 213, 539, 19, 605, 20, 386, 192, 18, 1, 2057, 6, 4300, 204, 490, 637, 98, 121, 199]\n",
-      "VI dec_out: [18, 1, 266, 2510, 65, 37, 213, 539, 19, 605, 20, 386, 192, 18, 1, 2057, 6, 4300, 204, 490, 637, 98, 121, 199, 3]\n",
+      "EN ids: [33, 1, 271, 388, 9, 1208, 12, 1128, 33, 1, 2059, 7, 3300, 214, 136, 5624, 5]\n",
+      "VI dec_in: [2, 33, 1, 366, 1695, 200, 31, 201, 664, 705, 18, 523, 193, 33, 1, 2059, 7, 3300, 214, 481, 707, 99, 119, 5]\n",
+      "VI dec_out: [33, 1, 366, 1695, 200, 31, 201, 664, 705, 18, 523, 193, 33, 1, 2059, 7, 3300, 214, 481, 707, 99, 119, 5, 3]\n",
       "Decoded EN:  ⁇ e need to build a simple  ⁇ ransformer from scratch.\n",
       "Decoded VI:  ⁇ húng ta cần xây dựng một mô hình  ⁇ ransformer đơn giản từ đầu.\n"
      ]
