--- a/notebook/01_check_raw_data.ipynb
+++ b/notebook/01_check_raw_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "id": "15e53d88",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train.en: 794523 lines\n",
-      "train.vi: 794523 lines\n",
+      "train.en: 451243 lines\n",
+      "train.vi: 451243 lines\n",
       "valid.en: 1553 lines\n",
       "valid.vi: 1553 lines\n",
       "test.en: 1268 lines\n",
@@ -26,7 +26,7 @@
     "\n",
     "files = [\"train.en\", \"train.vi\",\n",
     "         \"valid.en\", \"valid.vi\",\n",
-    "         \"test.en\", \"test.vi\"]\n",
+    "         \"test.en\", \"test.vi\",]\n",
     "\n",
     "for fn in files:\n",
     "    path = raw_dir / fn\n",
